<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michalke.app_berufsschule.UserActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_bsf" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:text="@string/loggedinText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/messageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold|italic"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:onClick="open"
            android:text="@string/confirmAlert" />

        <Button
            android:id="@+id/bPlay"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:onClick="play"
            android:text="@string/play"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/bExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="500dp"
            android:onClick="logout"
            android:text="@string/UserExit"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/bSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="500dp"
            android:onClick="settings"
            android:src="@drawable/settings_icon" />

    </RelativeLayout>

</android.widget.RelativeLayout>
