<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michalke.app_berufsschule.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="25dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/logo_bsf" />

        <TextView
            android:id="@+id/tLAnleitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/loginManual"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="2sp"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/tLUsername"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/loginUsername"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eLUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="50dp"
            android:paddingTop="2dp">

            <TextView
                android:id="@+id/tLPassword"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/loginPassword"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eLPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="login"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:onClick="register"
            android:text="@string/lRegister"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />


        <TextView
            android:id="@+id/tLHinweis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</android.widget.RelativeLayout>
